--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -8,10 +8,10 @@
 <a href="https://www.imdb.com/title/tt1187043/"><img src="../assets/images/3_Idiots.jpg" height="500px" /></a>
 <p>Probably the best modern bollywood movie ever made.</p>
 
-<h3>2. Interstellar</h3>
+<a href="https://www.imdb.com/title/tt0816692/"><h3>2. Interstellar</h3></a>
 <a href="https://www.imdb.com/title/tt0816692/"><img src="../assets/images/Interstellar.jpg" height="500px" /></a>
 <p>A fantastic work of art where science fiction, great storytelling, amazing visuals, top notch directing and outstanding acting come together to deliver us this masterpiece of a film.</p>
 
-<h3>3. Avengers: Infinity War</h3>
+<a href="https://www.imdb.com/title/tt4154756/"><h3>3. Avengers: Infinity War</h3></a>
 <a href="https://www.imdb.com/title/tt4154756/"><img src="../assets/images/AverngersIW.jpg" height="500px" /></a>
 <p>This movie wasn't just a movie, it was an event. The beginning of the end of an era in the world of cinema that redefined movie making and entertainment in general. Truly a one of a kind experience. </p>
